fix: resolve comment

--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,7 +1,7 @@
 <div class="product-container">
   <div class="product-index">
     @for (product of products; track product.id) {
-      <app-product-item [product]="product"></app-product-item>
+      <app-product-item [product]="product" (addProductToCart)="addToCart($event)"></app-product-item>
     }
   </div>
 </div>
